Fixes to header alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,6 @@
 @import "minima";
 
 .site-logo {
-  //width: 48px;
   float: left;
 }
   
@@ -86,6 +85,7 @@
 
 .social-and-action-right {
   float: right;
+  height: 60px;
 }
 
 .post-content {
